--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 
 .container {
     text-align: center;
+    position: relative;
 }
 
 .images {
@@ -17,40 +18,31 @@ body {
     justify-content: center;
     gap: 20px;
     margin-bottom: 20px;
+    position: relative;
 }
 
 .photo {
-    width: 150px;
-    height: 150px;
+    width: 300px; /* Fotoğrafların başlangıç boyutunu iki kat yapıyoruz */
+    height: 300px;
     transition: transform 0.5s ease-in-out;
 }
 
-.photo.enlarged {
-    transform: scale(2); /* Fotoğrafları iki kat büyüt */
+#heart {
+    font-size: 100px; /* Kalbin büyüklüğünü ayarlayın */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.show-heart {
+    opacity: 1;
 }
 
 .buttons {
     margin-top: 20px;
 }
 
-button {
-    padding: 10px 20px;
-    margin: 10px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.hidden {
-    display: none;
-}
-
-#heart {
-    font-size: 100px; /* Kalbin büyüklüğünü ayarlayın */
-    margin-top: 20px;
-    transition: opacity 0.5s ease-in-out;
-    opacity: 0;
-}
-
-.show-heart {
-    opacity: 1;
-}
+b
