--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
 .photo {
     width: 300px; /* Fotoğrafların başlangıç boyutunu iki kat yapıyoruz */
     height: 300px;
-    transition: transform 0.5s ease-in-out;
 }
 
 #heart {
@@ -45,4 +44,13 @@ body {
     margin-top: 20px;
 }
 
-b
+button {
+    padding: 10px 20px;
+    margin: 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
+}
